# simulador-riesgos-aeronauticos

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
docs/: .gitignore  README.md  especificacion_obtencion_datos_wrf.md  estado_actual.md  instrucciones_programacion_wrf.md  pendientes_correccion.md  plan_implementacion_obtencion_datos_wrf.md
docs/Presentacion_tarea/: 04-29.md  transcripcion_clase.txt
docs/archive/: README.md
docs/archive/2026-05-13/reports/: decisiones_finales_implementacion_wrf.md  reporte_implementacion_riesgos.md
docs/archive/2026-05-13/reviews/: revision_codigo_tests_cli.md  revision_documentacion_presentacion.md
docs/archive/2026-05-13/specs/: especificacion_mejoras_entrega_final_wrf.md  (+1 more)
docs/archive/reports/: caso_estudio_20091216.md
docs/guide/: guia_interpretacion_mapas_riesgos.md
docs/plans/: plan_codigo_deteccion_visualizacion.md  plan_implementacion_mejoras_entrega_final_wrf.md  plan_implementacion_representacion_riesgos_aeronauticos.md  plan_implementacion_rutas_vuelo.md
docs/reports/: reporte_implementacion_rutas.md
docs/reviews/: revision_cientifica_meteorologica.md  revision_cumplimiento_profesor.md  revision_riesgos_rutas.md
docs/specs/: especificacion_representacion_riesgos_aeronauticos.md
src/simulador_wrf/: airports.py  backends.py  cli.py  diagnostics.py  io.py  normalization.py  route_outputs.py  routes.py  visualization.py
tests/: conftest.py  test_diagnostics.py  test_diagnostics_advanced.py  test_integration.py  test_io.py  test_routes.py  test_visualization_advanced.py
