[project]
name = "simulador-wrf"
version = "0.1.0"
description = "Herramienta de procesamiento y normalización de datos meteorológicos WRF para análisis aeronáutico."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "click>=8.3.3",
    "dask[complete]>=2026.3.0",
    "matplotlib>=3.10.9",
    "metpy>=1.7.1",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "xarray>=2026.4.0",
    "xwrf>=0.0.5",
]

[project.scripts]
simulador-wrf = "simulador_wrf.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
